RESOLVED FIXED49937
[chromium] we should not create an external popup menu for empty selects
https://bugs.webkit.org/show_bug.cgi?id=49937
Summary [chromium] we should not create an external popup menu for empty selects
Jay Civelli
Reported 2010-11-22 13:46:20 PST
When clicking a select with no items, we should not create an external popup as there is nothing to show and it ends up causing a crasher in Chromium.
Attachments
Patch (1.27 KB, patch)
2010-11-22 13:51 PST, Jay Civelli
no flags
Jay Civelli
Comment 1 2010-11-22 13:51:38 PST
David Levin
Comment 2 2010-11-22 14:00:08 PST
For any onlookers, the test is here: http://codereview.chromium.org/5275001/
WebKit Commit Bot
Comment 3 2010-11-22 22:47:07 PST
Comment on attachment 74593 [details] Patch Clearing flags on attachment: 74593 Committed r72586: <http://trac.webkit.org/changeset/72586>
WebKit Commit Bot
Comment 4 2010-11-22 22:47:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.