2010-11-22  Jay Civelli  <jcivelli@chromium.org>

Reviewed by David Levin.

        Don't create an external popup menu when there are no items to show.
        https://bugs.webkit.org/show_bug.cgi?id=49937

        * src/ExternalPopupMenu.cpp:
        (WebKit::ExternalPopupMenu::show):

Canonical link: https://commits.webkit.org/63047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72586 268f45cc-cd09-0410-ab3c-d52691b4dbfc